syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
}

message ValidateUserRequest {
  string token = 1;
}

message ValidateUserResponse {
  bool isValid = 1;
  string userId = 2;
} 